src/tests/fixtures/input_type_one_of/oneOfNotOnType.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlInput
 * @oneOf
 */
export class Greeting {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/input_type_one_of/oneOfNotOnType.invalid.ts:5:1 - error: Expected @oneOf @gqlInput to be on a type alias.

5 export class Greeting {}
  ~~~~~~~~~~~~~~~~~~~~~~~~
